kubernetes/base/book-mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: book-mongodb
