kubernetes/base/book-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: book
  labels:
    app: book
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: book
